# learn-gfx

learn-box2d/hello-box2d/: CMakeLists.txt  main.c
learn-opengl-archive/simple/: main.cpp
learn-opengl-archive/with-buck/simple/: main.cpp
learn-opengl-archive/with-cmake/exe-lib/: CMakeLists.txt  app.cpp
learn-opengl-archive/with-cmake/exe-lib-projs/: CMakeLists.txt
learn-opengl-archive/with-cmake/exe-lib-projs/app/: CMakeLists.txt  app.cpp
learn-opengl-archive/with-cmake/exe-lib-projs/include/gfx/: gfx.h
learn-opengl-archive/with-cmake/exe-lib-projs/src/: CMakeLists.txt  renderer.cpp
learn-opengl-archive/with-cmake/exe-lib/renderer/: CMakeLists.txt  gfx.cpp
learn-opengl-archive/with-cmake/exe-only/: CMakeLists.txt  app.cpp
learn-pandas3d/bullet-samples/: 04_Filtering.py  07_Raycast.py  08_Contacts.py  09_Ccd.py  15_Ghost.py
learn-pandas3d/cpp/first/: CMakeLists.txt  README.md  build.sh  first.cpp  first.sh
learn-pandas3d/cpp/fourth/: build.sh  fourth.cpp  fourth.sh
learn-pandas3d/cpp/second/: build.sh  second.cpp  second.sh
learn-pandas3d/cpp/third/: build.sh  third.cpp  third.sh
learn-pandas3d/py/: bullet_demo.py  first.py  lesson1.py  scratch.py
learn-pybullet/: Untitled.ipynb  client.py  gui_server.py  main.py  quickstart.py  scratch.ipynb  shared_client.py  shared_server.py
learn-pybullet/urdfs/: cube.urdf  movable.urdf  simple.urdf
learn-pygame/: center_justify.py  demo_dirty_update.py  demo_sprite.py  demo_surfarray.py  demo_update.py  learn-pygame.code-workspace  moving_rects.py  scratch.py
learn-pygame/aliens/aliens/: consts.py  main.py  score.py  utils.py
learn-pygame/aliens/aliens/sprites/: __init__.py  alien.py  bomb.py  player.py  shot.py
learn-pygame/blitting/: example1.py  example2.py  example3.py  example4.py
learn-pygame/chimp/: chimp.py
learn-pygame/intro/: intro.py
learn-pygame/pong/: pong.py
learn-pygame/pygame-notes/: running-notes.md
learn-raylib/: raylib-notes.md
learn-raylib/camera-experiments/: CMakeLists.txt  main.c
learn-raylib/raylib-demos/: CMakeLists.txt  anim_demo.c  background_demo.c  button_demo.c  camera_demo.c  collision_demo.c  demos.h  explosion_demo.c  gesture_demo.c  loading_thread.c  log_demo.c  main.c  raw_texture.c  screen_demo.c  texture_demo.c  user_input_demo.c  utils.c  utils.h
learn-raylib/web/: CMakeLists.txt  main.c
learn-raylib/web-cpp/: Background.cpp  Background.h  CMakeLists.txt  clean.fish  main.cpp
learn-raylib/web-cpp/web-build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  web-cpp.html  web-cpp.js  web-cpp.wasm
learn-raylib/web-cpp/web-build/.cmake/api/v1/reply/: cache-v2-890bec01bae5fd50cc5e.json  cmakeFiles-v1-d4d59e84863ef797891c.json  codemodel-v2-9370781cd1f27c31651e.json  index-2025-01-02T16-46-57-0513.json  target-web-cpp-Debug-65dd1aee476b11489ac3.json  toolchains-v1-1f85cdedbf0609eb8a63.json
learn-raylib/web-py/: build.fish  web-py-notes.md
learn-raylib/web-py/src/: main.py
learn-raylib/web-py/src/web_py/: game.py
learn-raylib/web/web-build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  web.html  web.js  web.wasm
learn-raylib/web/web-build/.cmake/api/v1/reply/: cache-v2-6d172d857bdffda1d764.json  cmakeFiles-v1-084278008653edcad6f3.json  codemodel-v2-63089f4bc925c5f6f17f.json  index-2024-12-26T03-26-34-0600.json  target-web-Debug-04e7d51b6ae521be88b1.json  toolchains-v1-3c6cbc2b1d0682ce7e9f.json
